--- a/usb_final.ioc
+++ b/usb_final.ioc
@@ -4,16 +4,17 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=I2C1
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USB_HOST
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=RTC
 Mcu.IP5=SYS
 Mcu.IP6=TIM3
 Mcu.IP7=TIM10
-Mcu.IP8=USART3
-Mcu.IP9=USB_HOST
-Mcu.IPNb=11
+Mcu.IP8=TIM11
+Mcu.IP9=USART3
+Mcu.IPNb=12
 Mcu.Name=STM32F413Z(G-H)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -40,14 +41,15 @@ Mcu.Pin27=VP_SYS_VS_Systick
 Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin29=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=VP_USB_HOST_VS_USB_HOST_MSC_FS
+Mcu.Pin30=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin31=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA1
 Mcu.Pin6=PB0
 Mcu.Pin7=PB14
 Mcu.Pin8=PD8
 Mcu.Pin9=PD9
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F413ZHTx
@@ -324,6 +326,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_USB_HOST_VS_USB_HOST_MSC_FS.Mode=MSC_FS
